resolve white bg issue on mobile for bg image

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body::before {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-image: url("/images/backgroundimage.svg");
   background-size: cover;
   background-position: center;
